--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+@import "tailwindcss";
+
+/*
 :root {
   font-family: "Yu Gothic UI", "Meiryo", "MS PGothic", system-ui, Avenir,
     Helvetica, Arial, sans-serif;
@@ -78,3 +81,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
